feat(jpms): modularize `failureaccess` + `testlib`
This change adds a `module-info.java` definition for the ancillary
`failureaccess` and `testlib` libraries. Test Lib is kept as an
`open module` so that it can be reflectively introspected.

- feat(jpms): add `module-info.java` to `failureaccess`
- feat(jpms): add `module-info.java` to `testlib`
- fix: necessary fixes to get testsuite running on modular java

Signed-off-by: Sam Gammon <sam@elide.ventures>